--- a/public/pageone.html
+++ b/public/pageone.html
@@ -241,12 +241,23 @@
     }
 
     function add_control_buttons_to_plot_rewrite_dashboard(plot_no) {
-      /*rewrite_element_0.innerHTML = story_list[plot_no][0] +
-        "<br/>&nbsp;<br/><input type=\"button\" class=\"btn waves-effect waves-light\" value=\"Write New Plot\" onclick=\"rewrite_plot(" + plot_no +
-        ")\" />&emsp;<input type=\"button\" class=\"btn waves-effect waves-light\" value=\"Back to Home\" onclick=\"close_rewrite_plot_dashboard()\"/>"; */
       rewrite_element_0.innerHTML = story_list[plot_no][0] +
         "<br/>&nbsp;<br/><button class=\"btn waves-effect waves-light blue white-text\" onclick=\"rewrite_plot(" + plot_no +
         ")\">Write New Plot<i class='material-icons right'>create</i></button>&emsp;<button class=\"btn waves-effect waves-light blue white-text\" onclick=\"close_rewrite_plot_dashboard()\">Done <i class='material-icons right'>done</i></button>"
+    }
+
+    function add_radio_buttons_to_plot_rewrite_dashboard(plot_no){
+      var rewrite_element_content = "";
+      for (i = story_list[plot_no][3].length - 1; i >= 0; --i) {
+        rewrite_element_content = rewrite_element_content + "<br/><label>";
+        rewrite_element_content = rewrite_element_content + "<input type=\"radio\" value=\"" + i +
+          "\"  class=\"with-gap\" name=\"plotno\"  onclick=\"set_as_plot(" + plot_no + "," + i + ")\"";
+        if(story_list[plot_no][0]==story_list[plot_no][3][i]){
+          rewrite_element_content = rewrite_element_content + " checked ";
+        }
+        rewrite_element_content = rewrite_element_content + " /><span>" + story_list[plot_no][3][i] + "</span></label>";
+      }
+      rewrite_element_2.innerHTML = rewrite_element_content;
     }
 
     function set_as_plot(plot_no, sublist_index) {
@@ -259,7 +270,6 @@
       current_plotwords = [
         [plot_no, story_list[plot_no][2]]
       ];
-      //rewrite_element_2.innerHTML = rewrite_element_1.innerHTML + rewrite_element_2.innerHTML;
       rewrite_element_1.innerHTML = "";
       call_phase_2_step_2();
     }
@@ -278,21 +288,9 @@
     function open_rewrite_plot_dashboard(plot_no) {
       document.getElementById('rewrite_section').style.display = "block";
       document.getElementById('timeline_section').style.display = "none";
-
-      //------------------------------------
-      /*story_list = [
-        ["aaaa", "PLOT", [],
-          ["bbbb", "cccc", "aaaa", "dddd", "eeee"]
-        ]
-      ];*/
-      //------------------------------------
-
-      /*rewrite_element_0.innerHTML =  story_list[plot_no][0] +
-        "<br/>&nbsp;<br/><input type=\"button\" class=\"btn waves-effect waves-light\" value=\"Write New Plot<iclass='material-icons right'>create</i>\" onclick=\"rewrite_plot(" + plot_no +
-        ")\" />&emsp;<input type=\"button\" class=\"btn waves-effect waves-light\" value=\"Back to Home\" onclick=\"close_rewrite_plot_dashboard()\"/>";*/
       add_control_buttons_to_plot_rewrite_dashboard(plot_no);
       rewrite_element_1.innerHTML = "";
-      var rewrite_element_content = "";
+      /*var rewrite_element_content = "";
       for (i = story_list[plot_no][3].length - 1; i >= 0; --i) {
         rewrite_element_content = rewrite_element_content + "<br/><label>";
         rewrite_element_content = rewrite_element_content + "<input type=\"radio\" value=\"" + i +
@@ -302,7 +300,8 @@
         }
         rewrite_element_content = rewrite_element_content + " /><span>" + story_list[plot_no][3][i] + "</span></label>";
       }
-      rewrite_element_2.innerHTML = rewrite_element_content;
+      rewrite_element_2.innerHTML = rewrite_element_content;*/
+      add_radio_buttons_to_plot_rewrite_dashboard(plot_no);
     }
 
     function write_screenplay(option) {
@@ -507,10 +506,11 @@
             current_data_server = 0;
           if (rewrite_flag == true) {
             story_list[data.output[0][0]][3].push(data.output[0][1]);
-            rewrite_element_2.innerHTML = "<br/><label><input type=\"radio\" class=\"with-gap\" value=\"" + (
+            /*rewrite_element_2.innerHTML = "<br/><label><input type=\"radio\" class=\"with-gap\" value=\"" + (
                 story_list[data.output[0][0]][3].length - 1) + "\" onclick=\"set_as_plot(" + data.output[0][0] +
               "," + (story_list[data.output[0][0]][3].length - 1) + ")\" /><span>" + data.output[0][1] +
-              "</span></label>" + rewrite_element_2.innerHTML;
+              "</span></label>" + rewrite_element_2.innerHTML;*/
+            add_radio_buttons_to_plot_rewrite_dashboard(data.output[0][0]);
             //rewrite_progress.innerHTML = "New Plot Generated !.....";
             rewrite_progress.classList.remove("loader");
             rewrite_flag = false;
