--- a/public/pageone.html
+++ b/public/pageone.html
@@ -299,12 +299,13 @@
       if (story_list != undefined) {
         for (i = 0; i < story_list.length; ++i) {
           if (story_list[i][1] == "PLOT" && story_list[i][0] != "") {
-            script_content = script_content + "<h3>SCENE : " + sceneno + "</h3>";
+            script_content = script_content + "<br/><h3 class='center-align'>SCENE : " + sceneno + "</h3>";
             sceneno = sceneno + 1;
             script_content = script_content + "<span style=\"color: red;\">" + story_list[i][0].trim() + "</span>";
             if (option == 2) {
-              script_content = script_content + "&nbsp;<button onclick=\"open_rewrite_plot_dashboard(" + i +
-                ")\">Rewrite</button>";
+              /*script_content = script_content + "&nbsp;<button class='btn waves-effect waves-light' onclick=\"open_rewrite_plot_dashboard(" + i +
+                ")\">Rewrite <i class='material-icons right'>edit</i></button>";*/
+              script_content = script_content + "<a class='btn-floating btn-small waves-effect waves-light red editbuttonclass'><i class='material-icons' onclick='open_rewrite_plot_dashboard("+i+")'>edit</i></a><br/>&nbsp;<br/>";
             } else if (option == 3) {
               script_content = script_content + "<audio style=\"height: 15px;\" src='/audio/" + audio_file_names[i] +
                 "' controls></audio>";
@@ -329,7 +330,9 @@
         }
         if (option == 2) {
           script_content = script_content +
-            "<br/>&nbsp;<br/>&nbsp;<br/><button onclick=\"call_phase_3_step_1()\">Generate Audio Transcript</button>";
+            "<div class='center-align'>" +
+            "<br/>&nbsp;<br/>&nbsp;<br/><button class='btn waves-effect waves-light' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class='material-icons right'>music_note</i></button>" +
+            "</div>";
         }
       }
       logger_element.innerHTML = logger_element.innerHTML + script_content;
