--- a/public/pageone.html
+++ b/public/pageone.html
@@ -305,7 +305,7 @@
             if (option == 2) {
               /*script_content = script_content + "&nbsp;<button class='btn waves-effect waves-light' onclick=\"open_rewrite_plot_dashboard(" + i +
                 ")\">Rewrite <i class='material-icons right'>edit</i></button>";*/
-              script_content = script_content + "<a class='btn-floating btn-small waves-effect waves-light red editbuttonclass'><i class='material-icons' onclick='open_rewrite_plot_dashboard("+i+")'>edit</i></a><br/>&nbsp;<br/>";
+              script_content = script_content + "&emsp;<a class='btn-floating btn-small waves-effect waves-light red editbuttonclass'><i class='material-icons' onclick='open_rewrite_plot_dashboard("+i+")'>edit</i></a><br/>&nbsp;<br/>";
             } else if (option == 3) {
               script_content = script_content + "<audio style=\"height: 15px;\" src='/audio/" + audio_file_names[i] +
                 "' controls></audio>";
@@ -331,7 +331,7 @@
         if (option == 2) {
           script_content = script_content +
             "<div class='center-align'>" +
-            "<br/>&nbsp;<br/>&nbsp;<br/><button class='btn waves-effect waves-light' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class='material-icons right'>music_note</i></button>" +
+            "<br/>&nbsp;<br/>&nbsp;<br/><button class='btn waves-effect waves-light blue white-text' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class='material-icons right'>music_note</i></button>" +
             "</div>";
         }
       }
@@ -345,6 +345,7 @@
 
       document.getElementById("log_section").style.display = "none";
       document.getElementById("rewrite_section").style.display = "none";
+      tippy('.editbuttonclass',{ content: "rewrite this plot" });
 
       initiate_socket_connection();
 
