--- a/public/pageone.html
+++ b/public/pageone.html
@@ -332,7 +332,7 @@
         if (option == 2) {
           script_content = script_content +
             "<div class='center-align'>" +
-            "<br/>&nbsp;<br/>&nbsp;<br/><button class='btn waves-effect waves-light blue white-text' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class='material-icons right'>music_note</i></button>" +
+            "<br/>&nbsp;<br/>&nbsp;<br/><button id='generate_audio_button' class='btn waves-effect waves-light blue white-text' onclick=\"call_phase_3_step_1()\">Generate Audio Transcript <i class='material-icons right'>music_note</i></button>" +
             "</div>";
         }
       }
@@ -413,6 +413,7 @@
         }
 
         call_phase_3_step_1 = function () {
+          timeline_content[3].innerHTML = "";
           socket.emit("client-to-server", {
             "phase": 3,
             "procedureNo": 0,
