--- a/public/pageone.html
+++ b/public/pageone.html
@@ -108,7 +108,7 @@
             <div class="paragraph__timeline__content-container">
               <div class="paragraph__timeline__content">
                 <div class="paragraph__timeline__title">Response #02</div>
-                <div id="progress_indicator_1" class="paragraph__timeline__info"></div>
+                <div id="progress_indicator_1" class="paragraph__timeline__info storyfont"></div>
                 <div class="paragraph__timeline__name">- Alyce Server</div>
                 <div class="paragraph__timeline__date-time">
                   <span class="paragraph__timeline__date">Step #2</span>
@@ -122,7 +122,7 @@
             <div class="paragraph__timeline__content-container">
               <div class="paragraph__timeline__content">
                 <div class="paragraph__timeline__title">Response #03</div>
-                <div id="progress_indicator_2" class="paragraph__timeline__info"></div>
+                <div id="progress_indicator_2" class="paragraph__timeline__info storyfont"></div>
                 <div class="paragraph__timeline__name">- Alyce Server</div>
                 <div class="paragraph__timeline__date-time">
                   <span class="paragraph__timeline__date">Step #3</span>
@@ -136,7 +136,7 @@
             <div class="paragraph__timeline__content-container">
               <div class="paragraph__timeline__content">
                 <div class="paragraph__timeline__title">Response #04</div>
-                <div id="progress_indicator_3" class="paragraph__timeline__info"></div>
+                <div id="progress_indicator_3" class="paragraph__timeline__info storyfont"></div>
                 <div class="paragraph__timeline__name">- Alyce Server</div>
                 <div class="paragraph__timeline__date-time">
                   <span class="paragraph__timeline__date">Step #4</span>
@@ -300,7 +300,7 @@
       if (story_list != undefined) {
         for (i = 0; i < story_list.length; ++i) {
           if (story_list[i][1] == "PLOT" && story_list[i][0] != "") {
-            script_content = script_content + "<br/><h4 class='center-align'>Scene " + sceneno + "</h4>";
+            script_content = script_content + "<br/>&nbsp;<h4 class='center-align'>SCENE " + sceneno + "</h4>";
             sceneno = sceneno + 1;
             script_content = script_content + "<div class='center-align'><span style=\"color: red;\">" + story_list[i][0].trim() + "</span>";
             if (option == 2) {
